src/test/deca/context/invalid/renduInitial/06typeError.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/06typeError.deca:2:0: mismatched input '\t' expecting {'println', 'print', IDENT, '}'}
